불필요한 소스 주석처리

--- a/dev/_codinglist/_components_data.pug
+++ b/dev/_codinglist/_components_data.pug
@@ -5,32 +5,7 @@ mixin componentsList(type, items)
     - var htmlPath = "html/"
     -
         var items = [
-            ["guide","","","","","guide","components/component_guide.pdf","","-",[["", ""],],],
-            ["scroll","","","","","scroll","components/component_scroll.html","","-",[["", ""],],],
-            ["map","","","","","map","components/component_map.html","","-",[["", ""],],],
-            ["video","","","","","video","components/component_video.html","","-",[["", ""],],],
-            ["icon","","","","","icon","components/component_icon.html","","-",[["", ""],],],
-            ["button","","","","","button","components/component_button.html","","-",[["", ""],],],
-            ["input","","","","","input","components/component_input.html","","-",[["", ""],],],
-            ["select","","","","","select","components/component_select.html","","-",[["", ""],],],
-            ["checkbox","","","","","checkbox","components/component_checkbox.html","","-",[["", ""],],],
-            ["radio","","","","","radio","components/component_radio.html","","-",[["", ""],],],
-            ["formGroup","","","","","formGroup","components/component_formGroup.html","","-",[["", ""],],],
-            ["pagination","","","","","pagination","components/component_pagination.html","","-",[["", ""],],],
-            ["table","","","","","table","components/component_table.html","","-",[["", ""],],],
-            ["card","","","","","card","components/component_card.html","","-",[["", ""],],],
-            ["list","","","","","list","components/component_list.html","","-",[["", ""],],],
-            ["tab","","","","","tab","components/component_tab.html","","-",[["", ""],],],
-            ["dropdowns","","","","","dropdowns","components/component_dropdowns.html","","-",[["", ""],],],
-            ["breadcrumb","","","","","breadcrumb","components/component_breadcrumb.html","","-",[["", ""],],],
-            ["scrollspy","","","","","scrollspy","components/component_scrollspy.html","","-",[["", ""],],],
-            ["carousel","","","","","carousel","components/component_carousel.html","","-",[["", ""],],],
-            ["accordion","","","","","accordion","components/component_accordion.html","","-",[["", ""],],],
-            ["tooltip","","","","","tooltip","components/component_tooltip.html","","-",[["", ""],],],
-            ["modal","","","","","modal","components/component_modal.html","","-",[["", ""],],],
-            ["toasts","","","","","toasts","components/component_toasts.html","","-",[["", ""],],],
-            ["spinners","","","","","spinners","components/component_spinners.html","","-",[["", ""],],],
-            ["test","","","","","test","components/component_test.html","","-",[["", ""],],],
+            ["공통","","","","","common","components/component.html","","-",[["", ""],],]
         ]
 
     //- 메뉴 영역일때
