--- a/www/css_partials/component_editor.css
+++ b/www/css_partials/component_editor.css
@@ -387,4 +387,4 @@
 .editor-reset-style var {
   font-style: italic; }
 
-/*# sourceMappingURL=../sass_maps/component_editor.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/component_editor.css.map */
