--- a/www/css_partials/component_pagination.css
+++ b/www/css_partials/component_pagination.css
@@ -154,4 +154,4 @@
   padding-left: 15px;
   padding-left: 1.5rem; }
 
-/*# sourceMappingURL=../sass_maps/component_pagination.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/component_pagination.css.map */
