--- a/www/css_partials/component_test.css
+++ b/www/css_partials/component_test.css
@@ -158,4 +158,4 @@
 .-component-test-style .font-compare {
   margin-top: 20px; }
 
-/*# sourceMappingURL=../sass_maps/component_test.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/component_test.css.map */
