--- a/www/css_partials/footer.css
+++ b/www/css_partials/footer.css
@@ -20,4 +20,4 @@
         -ms-flex-align: center;
             align-items: center; }
 
-/*# sourceMappingURL=../sass_maps/footer.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/footer.css.map */
