--- a/dev/_src/_pug/_extend_html5.pug
+++ b/dev/_src/_pug/_extend_html5.pug
@@ -46,38 +46,12 @@ html(class=`${htmlClass}`, lang=`${language}`)
             if NODE_ENV === 'development'
                 link(href=`${pathSettingHtml}css_partials/font.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/reset.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/print.css`, type='text/css', rel='stylesheet')
+                //- link(href=`${pathSettingHtml}css_partials/print.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/jquery.scrollbar.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/swiper.5.4.5.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/tui-date-picker.css`, type='text/css', rel='stylesheet')
+                //- link(href=`${pathSettingHtml}css_partials/tui-date-picker.css`, type='text/css', rel='stylesheet')
 
                 link(href=`${pathSettingHtml}css_partials/component_common.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_scroll.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_map.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_video.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_icon.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_button.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_input.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_select.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_checkbox.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_radio.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_formGroup.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_pagination.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_table.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_card.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_list.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_tab.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_dropdowns.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_breadcrumb.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_scrollspy.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_carousel.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_accordion.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_tooltip.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_modal.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_toasts.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_spinners.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_editor.css`, type='text/css', rel='stylesheet')
-                link(href=`${pathSettingHtml}css_partials/component_test.css`, type='text/css', rel='stylesheet')
                 link(href=`${pathSettingHtml}css_partials/componentlist.css`, type='text/css', rel='stylesheet')
 
                 link(href=`${pathSettingHtml}css_partials/header.css`, type='text/css', rel='stylesheet')
