--- a/dev/css/common.scss
+++ b/dev/css/common.scss
@@ -14,33 +14,33 @@
 @import '../css_partials/swiper.5.4.5';
 @import '../css_partials/tui-date-picker';
 
-@import '../css_partials/component_common';
-@import '../css_partials/component_scroll';
-@import '../css_partials/component_map';
-@import '../css_partials/component_video';
-@import '../css_partials/component_icon';
-@import '../css_partials/component_button';
-@import '../css_partials/component_input';
-@import '../css_partials/component_select';
-@import '../css_partials/component_checkbox';
-@import '../css_partials/component_radio';
-@import '../css_partials/component_formGroup';
-@import '../css_partials/component_pagination';
-@import '../css_partials/component_table';
-@import '../css_partials/component_card';
-@import '../css_partials/component_list';
-@import '../css_partials/component_tab';
-@import '../css_partials/component_dropdowns';
-@import '../css_partials/component_breadcrumb';
-@import '../css_partials/component_scrollspy';
-@import '../css_partials/component_carousel';
-@import '../css_partials/component_accordion';
-@import '../css_partials/component_tooltip';
-@import '../css_partials/component_modal';
-@import '../css_partials/component_toasts';
-@import '../css_partials/component_spinners';
-@import '../css_partials/component_editor';
-@import '../css_partials/component_test';
+// @import '../css_partials/component_common';
+// @import '../css_partials/component_scroll';
+// @import '../css_partials/component_map';
+// @import '../css_partials/component_video';
+// @import '../css_partials/component_icon';
+// @import '../css_partials/component_button';
+// @import '../css_partials/component_input';
+// @import '../css_partials/component_select';
+// @import '../css_partials/component_checkbox';
+// @import '../css_partials/component_radio';
+// @import '../css_partials/component_formGroup';
+// @import '../css_partials/component_pagination';
+// @import '../css_partials/component_table';
+// @import '../css_partials/component_card';
+// @import '../css_partials/component_list';
+// @import '../css_partials/component_tab';
+// @import '../css_partials/component_dropdowns';
+// @import '../css_partials/component_breadcrumb';
+// @import '../css_partials/component_scrollspy';
+// @import '../css_partials/component_carousel';
+// @import '../css_partials/component_accordion';
+// @import '../css_partials/component_tooltip';
+// @import '../css_partials/component_modal';
+// @import '../css_partials/component_toasts';
+// @import '../css_partials/component_spinners';
+// @import '../css_partials/component_editor';
+// @import '../css_partials/component_test';
 @import '../css_partials/componentlist';
 
 @import '../css_partials/header';
