--- a/www/css_partials/component_tab.css
+++ b/www/css_partials/component_tab.css
@@ -73,4 +73,4 @@
   .tab-content .tab-pane.active {
     display: block; }
 
-/*# sourceMappingURL=../sass_maps/component_tab.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/component_tab.css.map */
