--- a/www/css_partials/component_video.css
+++ b/www/css_partials/component_video.css
@@ -19,4 +19,4 @@
     width: 100%;
     height: 100%; }
 
-/*# sourceMappingURL=../sass_maps/component_video.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/component_video.css.map */
