--- a/www/css_partials/font.css
+++ b/www/css_partials/font.css
@@ -6,4 +6,4 @@
 .fonts-loaded .fonts-load {
   visibility: visible; }
 
-/*# sourceMappingURL=../sass_maps/font.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/font.css.map */
