--- a/www/css_partials/main_content.css
+++ b/www/css_partials/main_content.css
@@ -2,4 +2,4 @@
 /*! mobile 버전 - css */
 /*! pc & tablet 버전 - css */
 
-/*# sourceMappingURL=../sass_maps/main_content.css.map */
+/*# sourceMappingURL=../../sass_maps/css_partials/main_content.css.map */
