--- a/dev/css/common.scss
+++ b/dev/css/common.scss
@@ -45,6 +45,10 @@
 @import '../css_partials/header';
 @import '../css_partials/footer';
 
+@import '../css/culturetv';
+@import '../css/oneEye;
+
+
 // **********************************
 // 서브 컨텐츠 영역
 // 서브 카테고리 css는 각 페이지마다 불어오는 것을 권장 하지만
