--- a/dev/css_partials/component_common.scss
+++ b/dev/css_partials/component_common.scss
@@ -44,8 +44,8 @@ a{
     }
 }
 
-/*! skipnav */
-.skipnav{position:absolute;top:0;left:0;z-index:9999;width:100%;height:0;line-height:1}
-.skipnav a{display:block;overflow:hidden;width:1px;height:1px;margin:0 -1px -1px 0;padding:0;font-size:0;line-height:1}
-.skipnav a:active,.skipnav a:focus,.skipnav a:hover{position:absolute;top:0;left:0;z-index:50;width:100%;height:19px;margin:0;padding:5px 0;border:1px solid #c4d7ea;background:#2b6cb0;color:#fff;font-weight:700;font-size:1.333em;text-align:center;line-height:100%}
+// /*! skipnav */
+// .skipnav{position:absolute;top:0;left:0;z-index:9999;width:100%;height:0;line-height:1}
+// .skipnav a{display:block;overflow:hidden;width:1px;height:1px;margin:0 -1px -1px 0;padding:0;font-size:0;line-height:1}
+// .skipnav a:active,.skipnav a:focus,.skipnav a:hover{position:absolute;top:0;left:0;z-index:50;width:100%;height:19px;margin:0;padding:5px 0;border:1px solid #c4d7ea;background:#2b6cb0;color:#fff;font-weight:700;font-size:1.333em;text-align:center;line-height:100%}
 
